2013-06-03  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac (file-notification): New option, replaces inotify option.
	(HAVE_W32): Remove w32notify.o.
	(with_file_notification): Add checks for glib and w32. Adapt check
	for inotify.
	(Summary): Add entry for file notification.

	* autogen/config.in: Add entries for HAVE_GFILENOTIFY,
	HAVE_W32NOTIFY and USE_FILE_NOTIFY.

2013-06-02  Juanma Barranquero  <lekktu@gmail.com>

	* .bzrignore: Ignore dirs libexec/, share/ and var/.

2013-05-29  Xue Fuqiao  <xfq.free@gmail.com>

	* INSTALL: Fix description.

2013-05-27  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* configure.ac (HAVE_XRANDR): Check availability of
	XRRGetScreenResources rather than that of XRRQueryExtension.

2013-05-18  Eli Zaretskii  <eliz@gnu.org>

	* make-dist (files): Add nt/msysconfig.sh, nt/mingw-cfg.site,
	nt/epaths.nt, and nt/INSTALL.MSYS.

2013-05-18  Paul Eggert  <eggert@cs.ucla.edu>

	Port --enable-gcc-warnings to clang.
	* configure.ac (nw): Remove obsolescent warnings.
	These aren't needed for clang, or for gcc for that matter.
	(emacs_cv_clang): New var, which tests for clang.
	Omit warnings that clang is too picky about.
	(GLIB_DISABLE_DEPRECATION_WARNINGS): Define this;
	needed for Ubuntu 13.04 + clang + --enable-gcc-warnings.

	* make-dist (files): Add nt/Makefile.in, nt/gnulib.mk.
	Otherwise, 'configure; make' fails on non-Windows builds.

2013-05-16  Eli Zaretskii  <eliz@gnu.org>

	* lib/Makefile.am: If building for MS-Windows, include
	nt/gnulib.mk instead of lib/gnulib.mk.

	* configure.ac: Adapt to MSYS build on MS-Windows.

	* Makefile.in (NTDIR): New variable, for the MSYS build on
	MS-Windows.
	(SUBDIR): Add $(NTDIR).
	(.PHONY): Add epaths-force-w32.
	(msys_to_w32): New variable.
	(epaths-force-w32, install-nt, uninstall-nt): New targets.
	(lib-src src): Add $(NTLIB) to prerequisites.
	(lib lib-src lisp leim nt): Add 'nt'.
	(config.status): Use $(CFG).
	(.PHONY): Add install-$(NTDIR) and uninstall-$(NTDIR).