@@ -1,3 +1,8 @@
+2013-06-03  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* configure.ac (HAVE_GLIB): Add GLib check.  Set XGSELOBJ if GLib is
+	used.  Remove xgselect.o from XOBJ.
+
 2013-06-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* configure.ac (file-notification): New option, replaces inotify option.
